--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,9 @@
   "manifest_version": 2,
   "name": "YoutubeAUDIO",
   "version": "1.0",
+  "homepage_url": "https://github.com/sheddup/YoutubeAUDIO",
   "description": "Listen to Youtube, no video data downloaded. Embeds not supported.",
+  "author": "sheddup",
 
   "icons": {
     "48": "icons/extensionLogo.png"
