--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,16 @@
 
   "manifest_version": 2,
   "name": "YoutubeAUDIO",
-  "version": "1.1",
+  "version": "1.2",
   "homepage_url": "https://github.com/sheddup/YoutubeAUDIO",
   "description": "Listen to Youtube, no video data downloaded. Embeds not supported.",
   "author": "sheddup",
+
+  "applications": {
+    "gecko": {
+       "id": "{9be80948-e099-438b-8246-d1b679c89d47}"
+     }
+  },
 
   "icons": {
     "48": "icons/extensionLogo.png"
